--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,6 @@ AM_LDFLAGS =
 ACLOCAL_AMFLAGS = -I m4 
 
 bin_PROGRAMS = wsroutingserver
-wsroutingserver_SOURCES = main.c
+wsroutingserver_SOURCES = main.c commotion.c
  
 
