--- a/configure.ac
+++ b/configure.ac
@@ -15,6 +15,9 @@ AC_PROG_CXX
 AC_CHECK_LIB(websockets, main,,AC_MSG_ERROR(missing websockets.))
 AC_CHECK_LIB(z, main,,AC_MSG_ERROR(missing z.))
 
+AC_CHECK_LIB(jansson, main,,AC_MSG_ERROR(missing jansson.))
+
+
 
 echo "================="
 echo ""
