--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -66,7 +66,8 @@ CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
-am_wsroutingserver_OBJECTS = main.$(OBJEXT) commotion.$(OBJEXT)
+am_wsroutingserver_OBJECTS = main.$(OBJEXT) commotion.$(OBJEXT) \
+	topology.$(OBJEXT)
 wsroutingserver_OBJECTS = $(am_wsroutingserver_OBJECTS)
 wsroutingserver_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I.@am__isrc@
@@ -216,7 +217,10 @@ DATE = `date -R`
 AM_CPPFLAGS = -I $(top_srcdir)/src/ -DBUILD_DATE=\"`date '+%Y%m%d-%H:%M'`\" -DHG_VERSION=\"`hg id | sed 's/ /_/g'`\"
 AM_LDFLAGS = 
 ACLOCAL_AMFLAGS = -I m4 
-wsroutingserver_SOURCES = main.c commotion.c
+wsroutingserver_SOURCES = main.c \
+		          commotion.c \
+			  topology.c
+
 all: all-am
 
 .SUFFIXES:
@@ -309,6 +313,7 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/commotion.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/topology.Po@am__quote@
 
 .c.o:
 @am__fastdepCC_TRUE@	depbase=`echo $@ | sed 's|[^/]*$$|$(DEPDIR)/&|;s|\.o$$||'`;\
