Lots of work on the topology manager.  - Supports holding clients,addr,texy addr,hostname.  - Topology request now returns current topo
TODO
 - Support multiple connections from the same host, using some identifier.
 - Support changes in topology, broadcast new topo to clients on change.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,11 +9,10 @@ lib_LTLIBRARIES = libcommotionws.la
 libcommotionws_la_SOURCES = commotion.c \
                             topology.c
 
-bin_PROGRAMS = wsroutingserver
+bin_PROGRAMS = wsroutingserver test_topology
 wsroutingserver_SOURCES = main.c
 wsroutingserver_LDFLAGS = -lcommotionws
 
-bin_PROGRAMS = test_topology
 test_topology_SOURCES = test-topology.c
 test_topology_LDFLAGS = -lcommotionws 
 
