Lots of work in all areas, still working out how to broadcast from in the callbacks.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,13 +1,14 @@
 AUTOMAKE_OPTIONS = subdir-objects gnu
 AM_CFLAGS = -Wall -g
 DATE=`date -R`
+AM_CFLAGS=-I.
 AM_CPPFLAGS = -I $(top_srcdir)/src/ -DBUILD_DATE=\"`date '+%Y%m%d-%H:%M'`\" -DHG_VERSION=\"`hg id | sed 's/ /_/g'`\"
 AM_LDFLAGS = 
 ACLOCAL_AMFLAGS = -I m4 
 
 lib_LTLIBRARIES = libcommotionws.la
-libcommotionws_la_SOURCES = commotion.c \
-                            topology.c
+libcommotionws_la_SOURCES = topology.c commotion.c
+                            
 
 bin_PROGRAMS = wsroutingserver test_topology
 wsroutingserver_SOURCES = main.c
