--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -54,7 +54,7 @@ build_triplet = @build@
 host_triplet = @host@
 bin_PROGRAMS = wsroutingserver$(EXEEXT) test_topology$(EXEEXT)
 subdir = src
-DIST_COMMON = README $(srcdir)/Makefile.am $(srcdir)/Makefile.in
+DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
 	$(top_srcdir)/m4/ltoptions.m4 $(top_srcdir)/m4/ltsugar.m4 \
