--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,30 @@ nbproject
 *.deb
 *-build/
 tests/node-server/node_modules/
+.deps
+.libs
+*~
+*.o
+missing
+ltmain.sh
+libtool
+texinfo.tex
+Makefile
+Makefile.in
+Makefile.msc
+aclocal.m4
+autom4te.cache
+config.guess
+config.log
+config.status
+config.sub
+configure
+depcomp
+install-sh
+lexer.c
+*.la
+*.lo
+parser.[ch]
+stamp-*
+tstidl
+y.output
